<resources>
    <string name="app_name">Ruler</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name_long">Privacy Friendly Ruler</string>
    <string name="version_number">Version 1.0</string>

    <string name="mode">Mode</string>
    <string name="ruler">Ruler</string>
    <string name="gallery">Picture from Gallery</string>
    <string name="camera">Take Picture</string>

    <string name="calibrate">Calibrate</string>
    <string name="measureLineHeading">1. Measure</string>
    <string name="measureLine">Please measure the length of the line below as precisely as possible.</string>
    <string name="headingEnter">2. Enter Measured Length</string>
    <string name="calibrateConfirmButton">Calibrate</string>
    <string name="noInput">Please input the length of the line.</string>
    <string name="calibrationDone">Calibration finished.</string>
    <string name="calibrationMM">mm</string>
    <string name="calibrationInch">inch</string>
    <string name="calibrationWarning">Manual calibration does not eliminate inaccuracies due to rounding. Do not use this app as a professionally calibrated measuring device.</string>

    <string name="settings">Settings</string>

    <string name="action_calibration">Calibrate</string>
    <string name="action_resetcalibration">Reset Calibration</string>
    <string name="calibrationReset">Calibration reset.</string>

    <string name="pref_ruler">Ruler Settings</string>
    <string name="pref_leftruler">Left Ruler</string>
    <string name="pref_leftruler_verbose">What should be displayed on left ruler?</string>
    <string-array name="pref_leftruler_entries">
        <item>cm</item>
        <item>inch</item>
        <item>off</item>
    </string-array>
    <string-array name="pref_leftruler_evs">
        <item>cm</item>
        <item>inch</item>
        <item>off</item>
    </string-array>
    <string name="pref_leftruler_default">cm</string>

    <string name="pref_rightruler">Right Ruler</string>
    <string name="pref_rightruler_verbose">What should be displayed on right ruler?</string>
    <string-array name="pref_rightruler_entries">
        <item>cm</item>
        <item>inch</item>
        <item>off</item>
    </string-array>
    <string-array name="pref_rightruler_evs">
        <item>cm</item>
        <item>inch</item>
        <item>off</item>
    </string-array>
    <string name="pref_rightruler_default">inch</string>

    <string name="pref_anglemeasure">Angle Measure</string>
    <string name="pref_anglemeasure_verbose">Turn on scale for angle measuring?</string>
    <string-array name="pref_anglemeasure_entries">
        <item>degree</item>
        <item>radian</item>
        <item>off</item>
    </string-array>
    <string-array name="pref_anglemeasure_evs">
        <item>degree</item>
        <item>radian</item>
        <item>off</item>
    </string-array>
    <string name="pref_anglemeasure_default">off</string>

    <string name="welcome">Welcome</string>
    <string name="field_select_description_headline">Welcome to Privacy Friendly Ruler</string>
    <string name="field_select_description">This app provides rulers and angle measures on Your screen.</string>
    <string name="difficulty_description_headline">Settings</string>
    <string name="difficulty_description">You can change the units of measurement in the settings. In the action menu You can calibrate the ruler (optional).</string>
    <string name="disclaimer">This App is not a professionally calibrated measuring device. This App can be manually calibrated which may minimize the error. However, depending on the device there still could be rounding errors.</string>
    <string name="disclaimer_check">I have read the disclaimer about potential rounding issues.</string>
    <string name="disclaimer_check_toast">Please check that you have read the disclaimer.</string>
    <string name="okay">Okay</string>
    <string name="viewhelp">View Help</string>

    <string name="help">Help</string>
    <string name="help_overview_heading">Overview</string>
    <string name="help_calibration">Manual Calibration</string>
    <string name="help_disclaimer">Disclaimer</string>
    <string name="help_category_calibration">Calibration</string>
    <string name="pref_calibration_summary">You can manually calibrate the ruler via the "calibrate" option in the action menu.</string>
    <string name="pref_disclaimer_summary">This app is not a professionally calibrated measuring device. Technische Universität Darmstadt is not liable for any damage caused by use of this app.</string>
    <string name="help_privacy_heading">Privacy Info</string>
    <string name="help_permissions_heading">Permissions</string>
    <string name="help_permissions_description">Privacy Friendly Ruler does not use any permissions.</string>
    <string name="help_category_options">Settings</string>
    <string name="help_units">Units of Measurement</string>
    <string name="pref_units_summary">You can display a cm ruler, an inch ruler or no ruler on the left and on the right side of the screen. Both rulers can be set separately in the option menu.</string>
    <string name="help_angles">Angle Measure</string>
    <string name="pref_angles_summary">You can display an angle measure in degrees or radian on the left side of the screen.</string>
    <string name="help_intro">The Privacy Friendly Ruler App turns Your Phone into a ruler for quick on the fly measurements.</string>

    <string name="about">About</string>
    <string name="about_author">Author: </string>
    <string name="about_author_names" translatable="false">Roberts Kolosovs</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Technische Universität Darmstadt. Sourcecode licensed under GPLv3. Images copyright TU Darmstadt and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-ruler">Github-Repo</a></string>
    <string name="url"><a href="https://www.secuso.org/pfa">https://www.secuso.org</a></string>

</resources>
