<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/help_overview_heading">
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:title=""
            android:summary="@string/help_intro"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_category_options">
        <Preference android:title="@string/help_units"
            android:summary="@string/pref_units_summary"
            android:selectable="false"/>
        <Preference android:title="@string/help_angles"
            android:summary="@string/pref_angles_summary"
            android:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_category_calibration">
        <Preference android:title="@string/help_calibration"
            android:summary="@string/pref_calibration_summary"
            android:selectable="false"/>
        <Preference android:title="@string/help_disclaimer"
            android:summary="@string/disclaimer"
            android:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_privacy_heading">
        <Preference
            android:summary="@string/help_permissions_description"
            android:title="@string/help_permissions_heading" />
    </PreferenceCategory>

</PreferenceScreen>