<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalibrationActivity">

    <TextView
        android:id="@+id/discriptionMeasureHeading"
        style="@style/Base.DialogWindowTitle.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/measureLineHeading"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/discriptionMeasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/discriptionMeasureHeading"
        android:layout_centerHorizontal="true"
        android:text="@string/measureLine"
        android:textAlignment="center" />

    <Space
        android:id="@+id/space1"
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:layout_below="@+id/discriptionMeasure" />

    <Space
        android:id="@+id/space3"
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:layout_below="@+id/line" />

    <TextView
        android:id="@+id/headingEnter"
        style="@style/Base.DialogWindowTitle.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headingEnter"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/space3" />

    <Space
        android:id="@+id/space2"
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:layout_below="@+id/headingEnter" />

    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:minWidth="50dp"
        android:layout_below="@+id/space2"
        android:layout_alignStart="@+id/confirmButton"
        android:minHeight="10dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/space2"
        android:layout_alignParentEnd="true"
        android:id="@+id/radioGroup"
        android:layout_toEndOf="@+id/input">

        <RadioButton
            android:id="@+id/mmRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="mm"
            android:checked="true" />
        <RadioButton
            android:id="@+id/inchRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="inch" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calibrateConfirmButton"
        android:id="@+id/confirmButton"
        android:onClick="onConfirm"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/discriptionMeasureHeading" />

    <GridView
        android:layout_width="300px"
        android:layout_height="5dp"
        android:id="@+id/line"
        android:layout_below="@+id/space1"
        android:layout_centerHorizontal="true"
        android:background="@color/darkblue" />

</RelativeLayout>